changes: RankCard gap increased, now the client version is obtained dynamically (let's say, it always retrieves the latest version for the assets), champion names are now formatted to be correct (Kaisa is now Kai'Sa, AurelionSol is now Aurelion Sol)

--- a/match-report/src/components/RankCard/RankCard.css
+++ b/match-report/src/components/RankCard/RankCard.css
@@ -41,4 +41,5 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    gap: 10px;
 }
